--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -24,7 +24,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>OK</string>
+     <string>Generate</string>
     </property>
    </widget>
    <widget class="QTextEdit" name="textEdit1">
