--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -77,7 +77,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>Save to PDF</string>
+     <string>Save offer to HTML</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit">
